@@ -1,3 +1,9 @@
+2023-09-16  Ulrich Müller  <ulm@gentoo.org>
+
+	* glep-mode.el (rst-classify-adornment)
+	(glep-mode-ignore-preamble): Use :before-while instead of :around
+	as advice combinator.
+
 2023-09-12  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.67 released.
